remove json dependencies